@@ -115,6 +115,9 @@
 #define STDC_HEADERS 1
 
 /* see upnpconfig.h */
+#define UPNP_ENABLE_BLOCKING_TCP_CONNECTIONS 1
+
+/* see upnpconfig.h */
 /* #undef UPNP_ENABLE_IPV6 */
 
 /* see upnpconfig.h */
